2008-03-03  Johan Dahlin  <johan@gnome.org>

	* flumotion/test/test_wizard_save.py (TestWizardSave.testDefaultStream): 
	* flumotion/component/consumers/httpstreamer/httpstreamer_wizard.py:
	set burst-on-connect to False by default, update tests.

2008-03-03  Johan Dahlin  <jdahlin@async.com.br>

	* flumotion/common/bundleclient.py:
	* flumotion/common/fxml.py:
	* flumotion/common/medium.py:
	* flumotion/common/planet.py:
	Remove unused imports

2008-03-03  Johan Dahlin  <johan@gnome.org>

	* flumotion/component/consumers/httpstreamer/httpstreamer_wizard.py:
	Make it work with kiwi 1.9.14, by setting a default value for booleans

2008-03-03  Pedro Gracia  <pgracia@flumotion.com>

	* flumotion/component/bouncers/bouncer.py:
	Added getEnabled function in bouncer.
	Fixes #856.

2008-03-01  Johan Dahlin  <jdahlin@async.com.br>

	* flumotion/worker/checks/encoder.py:
	* flumotion/worker/checks/gst010.py:
	* flumotion/worker/checks/video.py:
	* flumotion/worker/feedserver.py:
	* flumotion/worker/main.py:
	* flumotion/worker/medium.py:
	* flumotion/worker/worker.py:
	Remove unused imports to make pyflakes happier.

2008-02-29  Johan Dahlin  <johan@gnome.org>

	* flumotion/test/test_wizard.py:
	* flumotion/ui/wizard.py:
	Remove get_state, get_step_option and get_step_options which are not used any
	longer. Horray!

2008-02-29  Johan Dahlin  <johan@gnome.org>

	* flumotion/wizard/configurationwizard.py (ConfigurationWizard.hasAudio) 
	(ConfigurationWizard.hasVideo): New methods
	* flumotion/wizard/consumptionsteps.py:
	* flumotion/wizard/conversionsteps.py:
	* flumotion/wizard/overlaystep.py:
	Replace get_step_option() for checking if there's audio or video
	with method calls to wizard.

2008-02-29  Johan Dahlin  <johan@gnome.org>

	* flumotion/wizard/save.py (WizardSaver._handleProducers): Check so both
	audio and video producer exists before comparing their component_type.

2008-02-29  Johan Dahlin  <jdahlin@async.com.br>

	* flumotion/test/test_wizard_models.py: